# Game-Engine-12-2013

./: .gitattributes  .gitignore  .gitmodules  Readme.md  Readme.txt
Base/Data/Shaders/: Glyph.glsl  Shader.glsl  Shape.glsl  Text.glsl
Deploy/: Game.cfg
Deploy/Data/: Collision.lua  Config.lua  Factory.lua  Game.lua  GameFrame.lua  Keyboard.lua  Main.lua  MenuFrame.lua  shader.glsl
Deploy/Data/Game/: Main.lua
Deploy/Data/Game/Common/: StateMachine.lua
Deploy/Data/Game/Frames/: GameFrame.lua  LoseFrame.lua  MenuFrame.lua
Deploy/Data/Game/Scripts/: Player.lua  Projectile.lua
Deploy/Data/Game/Systems/: Factory.lua
Deploy/Data/Scripts/: Common.lua  Enemy.lua  HealthPickup.lua  Main.lua  Player.lua  Projectile.lua
Deploy/Data/Shaders/: Glyph.glsl  Shape.glsl  Sprite.glsl
Project/: CMake-VS2013.bat  CMake-VS2015.bat  CMakeLists.txt
Source/: ConsoleCommand.hpp  ConsoleDefinition.cpp  ConsoleDefinition.hpp  ConsoleFrame.cpp  ConsoleFrame.hpp  ConsoleSystem.cpp  ConsoleSystem.hpp  ConsoleVariable.cpp  ConsoleVariable.hpp  Context.cpp  Context.hpp  Font.cpp  Font.hpp  FrameCounter.cpp  FrameCounter.hpp  Logger.cpp  Logger.hpp  Main.cpp  MainContext.cpp  MainContext.hpp  MainGlobal.cpp  MainGlobal.hpp  Precompiled.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  UserEvents.hpp
Source/Common/: Delegate.hpp  Dispatcher.hpp  Dispatcher.inl  Receiver.hpp  ScopeGuard.hpp  Services.hpp  ShelfPacker.cpp  ShelfPacker.hpp  StateMachine.hpp  Utility.cpp  Utility.hpp
Source/Console/: ConsoleCommand.cpp  ConsoleCommand.hpp  ConsoleDefinition.cpp  ConsoleDefinition.hpp  ConsoleFrame.cpp  ConsoleFrame.hpp  ConsoleHistory.cpp  ConsoleHistory.hpp  ConsoleSystem.cpp  ConsoleSystem.hpp  ConsoleUtility.cpp  ConsoleVariable.cpp  ConsoleVariable.hpp
Source/Game/: BaseFrame.hpp  Collision.cpp  Collision.hpp  CollisionComponent.cpp  CollisionComponent.hpp  CollisionDefinitions.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CollisionTypes.hpp  CommonScripts.cpp  CommonScripts.hpp  Component.hpp  ComponentContainer.hpp  ComponentPool.hpp  ComponentSystem.cpp  ComponentSystem.hpp  EnemyScript.cpp  EnemyScript.hpp  Entity.cpp  Entity.hpp  EntityHandle.hpp  EntityManager.cpp  EntityManager.hpp  EntitySubscriber.hpp  EntitySubsystem.cpp  EntitySubsystem.hpp  EntitySystem.cpp  EntitySystem.hpp  FloatingText.cpp  FloatingText.hpp  Game.cpp  Game.hpp  GameContext.cpp  GameContext.hpp  GameEvents.hpp  GameFactory.cpp  GameFactory.hpp  GameFrame.cpp  GameFrame.hpp  GameGlobal.cpp  (+56 more)
Source/Game/Collision/: CollisionComponent.hpp  CollisionObject.hpp  CollisionSystem.cpp  CollisionSystem.hpp
Source/Game/Component/: ComponentCollection.hpp  ComponentPool.hpp  ComponentSystem.hpp
Source/Game/Entity/: EntitySystem.cpp  EntitySystem.hpp
Source/Game/Event/: EventDefinitions.hpp  EventSystem.hpp
Source/Game/Health/: HealthComponent.cpp  HealthComponent.hpp  HealthSystem.cpp  HealthSystem.hpp
Source/Game/Identity/: IdentitySystem.cpp  IdentitySystem.hpp
Source/Game/Input/: InputComponent.cpp  InputComponent.hpp  InputState.cpp  InputState.hpp  InputSystem.cpp  InputSystem.hpp
Source/Game/Interface/: InterfaceSystem.cpp  InterfaceSystem.hpp  ValueBar.cpp
Source/Game/Progress/: ProgressStage.hpp  ProgressSystem.hpp
Source/Game/Render/: RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp
Source/Game/Script/: CommonScripts.cpp  CommonScripts.hpp  EnemyScript.cpp  EnemyScript.hpp  HealthPickupScript.cpp  HealthPickupScript.hpp  PlayerScript.cpp  PlayerScript.hpp  ProjectileScript.cpp  ProjectileScript.hpp  Script.hpp  ScriptComponent.cpp  ScriptComponent.hpp  ScriptSystem.cpp  ScriptSystem.hpp  SpawnerScript.cpp  SpawnerScript.hpp
Source/Game/Spawn/: SpawnSystem.cpp  SpawnSystem.hpp
Source/Game/Transform/: TransformComponent.cpp  TransformComponent.hpp
Source/Graphics/: BasicRenderer.cpp  BasicRenderer.hpp  Buffer.cpp  Buffer.hpp  CoreRenderer.cpp  CoreRenderer.hpp  Font.cpp  Font.hpp  FontCache.cpp  ScreenSpace.cpp  ScreenSpace.hpp  Shader.cpp  Shader.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  TextDrawState.cpp  TextDrawState.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  VertexInput.cpp  VertexInput.hpp
Source/Interface/: Button.cpp  Button.hpp  Element.cpp  Element.hpp  InterfaceElement.cpp  InterfaceElement.hpp  InterfaceRoot.cpp  InterfaceRoot.hpp  Root.cpp  Root.hpp
Source/Logger/: Logger.cpp  Logger.hpp  LoggerMessage.cpp  LoggerMessage.hpp  LoggerOutput.hpp  LoggerOutputConsole.cpp  LoggerOutputConsole.hpp  LoggerOutputFile.cpp  LoggerOutputFile.hpp  LoggerScopedMessage.cpp  LoggerScopedMessage.hpp
Source/Scripting/: LuaBindings.hpp  LuaConsole.cpp  LuaConsole.hpp  LuaDelegate.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaGame.cpp  LuaGame.hpp  LuaGraphics.cpp  LuaGraphics.hpp  LuaInterface.cpp  LuaInterface.hpp  LuaLogger.cpp  LuaLogger.hpp  LuaMath.cpp  LuaMath.hpp  LuaScript.cpp  LuaScript.hpp  LuaState.cpp  LuaState.hpp  LuaSystem.cpp  LuaSystem.hpp
Source/System/: BaseFrame.hpp  CacheManager.cpp  CacheManager.hpp  FrameCounter.hpp
Source/Utility/: NonCopyable.hpp
